# topsis-rs

./: Cargo.toml  LICENSE  README.md
examples/: main.rs
src/: lib.rs
