[package]
name = "topsis"
version = "0.1.0"
edition = "2021"
descriptuon = "A TOPSIS implementation written in Rust"
author = ["Haris Raharjo Putro <haris.r.putro@gmail.com>"]
repository = "https://github.com/harisraharjo/topsis-rs"
homepage = "https://github.com/harisraharjo/topsis-rs"
readme = "README.md"
license = "MIT"
keywords = ["topsis", "mcdm", "decision"]
category = ["mathematics"]
documentation = "https://docs.rs/topsis"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "main"


[dependencies]
nalgebra = "0.32.3"
wasm-bindgen = "0.2.87"
